# esp32s3

./: .gitignore  .gitmodules  Cargo.toml  README.md  sdkconfig.defaults  sdkconfig.h
crates/esp32s3/: Cargo.toml  partitions.csv
crates/esp32s3/.cargo/: config.toml
crates/esp32s3/src/: board.rs  image.rs  lib.rs  main.rs  rect_ext.rs
crates/esp32s3/src/board/: _led.rs  led.rs  screen.rs
crates/esp32s3/src/board/screen/: bindings.rs  ffi.rs  font.rs  memory.rs
crates/esp32s3_little_demo/: Cargo.toml  sdkconfig.defaults
crates/esp32s3_little_demo/src/: main.rs
includes/: esp_private  esp_system.h
src/: board.rs  image.rs  main.rs
src/board/: screen.rs
src/board/screen/: bindings.rs  ffi.rs  memory.rs
