[package]
name = "esp32s3"
version = "0.1.0"
authors = ["loxygenK"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
build = "build/build.rs"

[[bin]]
name = "esp32s3"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = "1.0.95"
paste = "1.0.15"
ws2812-esp32-rmt-driver = { version = "0.10.0", features = ["smart-leds-trait"] }
smart-leds-trait = "0.3.0"
embedded-graphics = "0.8.1"
cc = "=1.1.30"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
bindgen = "0.71.1"
glob = "0.3.1"
png = "0.17.16"
