[package]
name = "esp32s3_little_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "esp32s3_little_demo"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
log = "0.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = "1.0.95"
embedded-graphics = "0.8.1"
u8g2-fonts = { version = "0.5.1", features = ["std"] }
esp32s3 = { version = "0.1.0", path = "../esp32s3" }

[build-dependencies]
embuild = "0.32.0"

